Fix a11y issues in dark mode

--- a/src/css/blocks/button.css
+++ b/src/css/blocks/button.css
@@ -10,7 +10,10 @@
   border: none;
   cursor: pointer;
   background: var(--accent-color);
-  color: var(--accent-alt-color);
+  /* Exception for contrast */
+  color: light-dark(#ffe8aa, #bd1900);
+  /* Exception for light mode only */
+  /* text-shadow: 2px 2px 4px rgba(0,0,0,0.5); */
   padding: var(--button-y-padding) var(--button-x-padding);
   text-transform: uppercase;
   letter-spacing: var(--uppercase-kerning);
@@ -25,4 +28,3 @@
   color: var(--accent-color);
   /* box-shadow: 0 0 10px var(--gold, #FFD700), 0 0 25px var(--red, #C80016); */
 }
-
