--- a/src/css/blocks/hero.css
+++ b/src/css/blocks/hero.css
@@ -7,8 +7,6 @@
   font-size: 1.25rem;
   font-weight: 600;
   letter-spacing: 0.04em;
-  /* color: light-dark(#dc2104, #e5514a); */
-  color: var(--accent-alt-color);
-  /* Optional: Subtle border or outline for contrast */
-  /* border: 1.5px solid var(--primary-red); */
+  /* Exception for contrast */
+  color: light-dark(#856f00, #e5514a);
 }
